dclone package version history

Version 1.3-1, January 4, 2011
    * JASA paper (Lele et al. 2010) citation added to Rd.
    * loading rjags changed: it is now only suggested.
      Reason: some dclone functionality might be useful
      without JAGS/rjags present, and now loading
      rjags won't cause error if JAGS shared library
      not found.
    * rats example from WinBUGS manual Vol I. added.

Version 1.3-0, December 31, 2010
    * preparing for major CRAN release.
    * final RJ citation added.

Version 1.2-3, December 16, 2010
    * bugs.parfit: migrated into the new dcextras package
      where experimental and not fully supported functions
      will reside in the future.

Version 1.2-2, October 21, 2010
    * expanded examples for *.parfit functions.
    * clusterSeed removed from package: use
      clusterSetupRNG in snow instead.

Version 1.2-1, August 26, 2010
    * experimenting with bugs.parfit:
      the different seeds approach is not satisfactory
      because it cannot garantee independence of the chains
    * seed arg added to bugs.fit
    * RNG option added to work with snowWrapper
    * set.rng arg added to snowWrapper that calls
      snow::clusterSetupRNG
    * options for dclone reworked: can be accessed via
      the dcoptions function, and it sets the dcoptions option
    * dclone.dcdim: dimnames bug fixed when drop=TRUE
    * examples added on inits specifications for *.parfit

Version 1.2-0, August 26, 2010
    * polishing plot methods for R Journal paper.
    * citation entry added.

Version 1.1-1, May 6, 2010
    * print.custommodel has deparse=FALSE argument.
    * glm module for JAGS >2.0 is loaded at startup
    * parallel RNG handling reworked.
    * dctable fix for one parameter mcmc.list.
    * dcdiag returns r.hat for one parameter models.

Version 1.1-0, May 3, 2010
    * dclone was tested with JAGS 2.0.
    * major release submitted to CRAN.

Version 1.0-7, April 7, 2010
    * added flavour argument in dc.parfit.