@@ -57,13 +57,13 @@ flavour = c("jags", "bugs"), ...)
     cldata <- list(data=data, params=params, model=model, inits=inits,
         multiply=multiply, unchanged=unchanged, k=k)
     ## parallel computations
-    rng <- c("Wichmann-Hill", "Marsaglia-Multicarry",
-        "Super-Duper", "Mersenne-Twister")
-    rng <- rep(rng, length(cl))[1:length(cl)]
+#    rng <- c("Wichmann-Hill", "Marsaglia-Multicarry",
+#        "Super-Duper", "Mersenne-Twister")
+#    rng <- rep(rng, length(cl))[1:length(cl)]
     balancing <- if (getOption("dcoptions")$LB)
         "size" else "both"
     pmod <- snowWrapper(cl, k, dcparallel, cldata, lib="dclone", 
-        balancing=balancing, size=k, dir=getwd(), set.rng=TRUE, ...)
+        balancing=balancing, size=k, dir=getwd(), rng.type=getOption("dcoptions")$RNG, ...)
     mod <- pmod[[times]]
 
     ## dctable
