@@ -7,6 +7,10 @@ Version 1.3-1, January 4, 2011
       without JAGS/rjags present, and now loading
       rjags won't cause error if JAGS shared library
       not found.
+    * glm module not loading at startup because
+      it cannot be nicely unloaded in parallel versions.
+    * dcoptions RNG got "none" value as default,
+      *.parfit functions use dcoptions for snowWrapper.
     * rats example from WinBUGS manual Vol I. added.
 
 Version 1.3-0, December 31, 2010
